// 이커머스 ERD (DBML)
// dbdiagram.io 에서 시각화 가능

Project ecommerce {
  database_type: 'MySQL'
  Note: '''
    이커머스 핵심 기능 ERD

    주요 성능 최적화:
    - V3: orders(status, created_at) 인덱스로 쿼리 71.3% 개선 (2,930ms → 840ms)
    - V9: cart_items(cart_id) 인덱스로 장바구니 조회 60배 개선 (60ms → 1ms)
    - Left-most prefix rule 적용하여 중복 인덱스 제거
  '''
}

// 사용자 정보
Table users {
  id varchar [pk]
  name varchar [not null]
  balance bigint [default: 0, not null] // 잔액 (원 단위, long 타입)
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// 잔액 충전 이력
Table balance_history {
  id bigint [pk, increment]
  user_id varchar [ref: > users.id, not null]
  amount bigint [not null] // 충전 금액 (원 단위, long 타입)
  previous_balance bigint [not null] // 충전 전 잔액
  current_balance bigint [not null] // 충전 후 잔액
  payment_method varchar // 카드, 계좌이체 등
  charged_at timestamp [default: `now()`]

  indexes {
    (user_id, charged_at)
    (user_id)
  }
}

// 상품 정보
Table products {
  id varchar [pk]
  name varchar [not null]
  description text
  price bigint [not null] // 가격 (원 단위, long 타입)
  stock int [default: 0, not null] // 재고 수량 (Stock VO)
  category varchar
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (category, price) // 카테고리별 가격 정렬 최적화
  }
}

// 장바구니
Table carts {
  id varchar [pk]
  user_id varchar [ref: > users.id, not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (user_id) [unique] // 사용자당 장바구니 1개
  }
}

// 장바구니 항목
Table cart_items {
  id bigint [pk, increment]
  cart_id varchar [ref: > carts.id, not null]
  product_id varchar [ref: > products.id, not null]
  quantity int [not null]
  added_at timestamp [default: `now()`]

  indexes {
    (cart_id) // 장바구니 조회 최적화 (V9 성능 개선: 60ms → 1ms, 60배)
  }
}

// 쿠폰 정보
Table coupons {
  id varchar [pk]
  name varchar [not null]
  discount_type varchar [not null] // percentage, fixed
  discount_value bigint [not null] // 10% = 10, 5000원 = 5000 (long 타입)
  total_quantity int [not null] // 총 발급 가능 수량
  issued_quantity int [default: 0, not null] // 발급된 수량
  remaining_quantity int [not null] // 남은 수량 (성능 최적화)
  min_order_amount bigint [not null] // 최소 주문 금액
  expires_at timestamp [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (expires_at)
    (remaining_quantity) // 선착순 발급 체크용
  }
}

// 사용자 쿠폰 (발급된 쿠폰)
Table user_coupons {
  id varchar [pk]
  user_id varchar [ref: > users.id, not null]
  coupon_id varchar [ref: > coupons.id, not null]
  issued_at timestamp [default: `now()`]
  used_at timestamp [null] // null이면 미사용, 값이 있으면 사용됨
  expires_at timestamp [not null]
  version bigint [default: 0] // 낙관적 락 (@Version)

  indexes {
    (user_id, coupon_id) // 중복 발급 체크용
    (user_id) // 사용자별 쿠폰 조회
  }

  Note: 'status는 필드가 아닌 메서드로 계산 (used_at, expires_at 기반)'
}

// 주문 정보
Table orders {
  id varchar [pk]
  user_id varchar [ref: > users.id, not null]
  user_coupon_id varchar [ref: > user_coupons.id, null] // 사용된 쿠폰
  total_amount bigint [not null] // 총 금액 (원 단위, long 타입)
  discount_amount bigint [default: 0, not null] // 할인 금액
  final_amount bigint [not null] // 최종 결제 금액
  status varchar [default: 'PENDING', not null] // PENDING, COMPLETED, CANCELLED
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  paid_at timestamp [null]

  indexes {
    (status, created_at) // 인기 상품 조회 최적화 (V3: 2,930ms → 840ms, 71.3% 개선)
    (user_id) // 사용자별 주문 조회
    (user_id, status) // 사용자별 상태별 주문 조회
  }
}

// 주문 상세
Table order_items {
  id bigint [pk, increment]
  order_id varchar [ref: > orders.id, not null]
  product_id varchar [ref: > products.id, not null]
  product_name varchar [not null] // 주문 당시 상품명 (스냅샷)
  quantity int [not null]
  unit_price bigint [not null] // 주문 당시 단가 (스냅샷, long 타입)
  subtotal bigint [not null] // 소계
  created_at timestamp [default: `now()`]

  indexes {
    (order_id)
    (product_id)
  }
}

// 결제 정보
Table payments {
  id varchar [pk]
  order_id varchar [ref: - orders.id, not null] // 1:1 관계
  user_id varchar [ref: > users.id, not null]
  amount bigint [not null] // 결제 금액 (원 단위, long 타입)
  payment_method varchar [default: 'balance', not null] // balance, card, transfer 등
  status varchar [default: 'completed', not null] // completed, failed, refunded
  paid_at timestamp [default: `now()`]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (order_id) [unique]
    (user_id, paid_at)
    (status)
  }
}

// 외부 전송 데이터 (Outbox Pattern)
Table outbox_events {
  id varchar [pk]
  order_id varchar [ref: > orders.id, not null]
  event_type varchar [default: 'ORDER_COMPLETED', not null]
  payload text [not null] // JSON 형태의 주문 데이터
  synced boolean [default: false, not null] // 전송 완료 여부
  sync_attempts int [default: 0, not null] // 전송 시도 횟수
  synced_at timestamp [null] // 전송 완료 시각
  last_sync_error text [null] // 마지막 전송 실패 에러 메시지
  next_retry_at timestamp [null] // 다음 재시도 시각
  created_at timestamp [default: `now()`]

  indexes {
    (order_id)
    (synced)
    (next_retry_at)
  }
}

// 재입고 알림
Table restock_notifications {
  id bigint [pk, increment]
  user_id varchar [ref: > users.id, not null]
  product_id varchar [ref: > products.id, not null]
  email varchar [not null]
  notified boolean [default: false] // 알림 발송 여부
  notified_at timestamp [null]
  created_at timestamp [default: `now()`]

  indexes {
    (product_id, notified)
    (user_id)
  }
}
